--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -1,3 +1,51 @@
 * {
     font-family: 'Roboto', sans-serif;
+    text-align: center;
+}
+
+input {
+    min-width: 300px;
+    height: 20px;
+    margin: 5px;
+    border-radius: 5px;
+}
+
+.food-carousel {
+    background: url('https://i2.wp.com/www.nourishmovelove.com/wp-content/uploads/2017/01/Avocado-Toast-Egg_Horizontal_2.jpg?fit=5184%2C3456&ssl=1') center center no-repeat;
+    background-size: cover;
+    min-width: 100%;
+    height: 200px;
+    margin-bottom: 50px;
+}
+
+.food-photo {
+    width: 100%;
+}
+
+.recipes-list {
+    display: flex;
+}
+
+.recipes-title {
+    display: flex;
+    margin: 10px;
+}
+
+.recipe-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.recipe-box {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+}
+
+.recipe-photo {
+    margin: 5px;
+}
+
+hr {
+    margin-bottom: 10px;
 }
