--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -1,7 +1,31 @@
 * {
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
+    font-family: 'Pavanam', sans-serif;    text-align: center;
 }
+
+h1 {
+    font-family: 'Permanent Marker', cursive;
+    font-size: 5em;
+    margin: 0 auto;
+}
+
+h3 {
+    font-family: 'Caveat', cursive;
+    font-size: 1.2em;
+    margin: 15px 0;
+}
+
+.subtitle {
+    font-size: 2em;
+}
+
+h1 .main-title {
+    font-size: 1.7em;
+    margin: 0 50px;
+    text-align: right;
+}
+
+.material-icons.md-48 { font-size: 48px; }
+
 
 input {
     min-width: 300px;
@@ -48,6 +72,8 @@ input {
 
 .recipe-title {
     max-width: 300px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .recipe-photo {
@@ -66,4 +92,60 @@ input {
 
 hr {
     margin-bottom: 10px;
+}
+
+button {
+    font-family: 'Roboto', sans-serif;
+}
+
+.enter {
+    margin: 25px 0 25px 0;
+    height: 50px;
+    width: 150px;
+    align-self: center;
+    font-size: 1.2em;
+    background-color: #033658;
+}
+
+@media (max-width: 600px) {
+    .splash-container {
+        margin: 5px auto;
+    }
+    .gradient-container {
+        padding: 35px;
+    }
+    .recipe-container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 10px auto;
+    }
+    .title {
+        font-size: 4em;
+    }
+    .subtitle {
+        font-size: 1.5em;
+    }
+    .enter {
+        margin: 15px 0 15px 0;
+    }
+    .wrapper {
+        flex-direction: column;
+        padding: 0;
+        margin: 15px 15px 25px;
+    }
+    .main {
+        margin: 0 5px;
+    }
+    form {
+        margin: 15px;
+    }
+    h3 {
+        margin: 0 0 5px;
+    }
+    .main-title {
+        font-size: 1.5em;
+        margin: 0 35px;
+        text-align: center;
+    }
 }
