--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -1,5 +1,6 @@
 * {
-    font-family: 'Pavanam', sans-serif;    text-align: center;
+    font-family: 'Pavanam', sans-serif;
+    text-align: center;
 }
 
 h1 {
@@ -11,7 +12,7 @@ h1 {
 h3 {
     font-family: 'Caveat', cursive;
     font-size: 1.2em;
-    margin: 15px 0;
+    margin: 5px 0;
 }
 
 .subtitle {
@@ -56,7 +57,8 @@ input {
 }
 
 .recipes-title {
-    margin: 35px 0 10px;
+    margin: 35px 0 0;
+    font-size: 2em;
 }
 
 .recipe-container {
@@ -74,6 +76,8 @@ input {
     max-width: 300px;
     white-space: nowrap;
     text-overflow: ellipsis;
+    text-align: left;
+    margin-left: 5px;
 }
 
 .recipe-photo {
@@ -98,13 +102,12 @@ button {
     font-family: 'Roboto', sans-serif;
 }
 
+.save-recipe-button {
+    margin: 0 5px;
+}
+
 .enter {
     margin: 25px 0 25px 0;
-    height: 50px;
-    width: 150px;
-    align-self: center;
-    font-size: 1.2em;
-    background-color: #033658;
 }
 
 @media (max-width: 600px) {
