--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -48,7 +48,7 @@ body {
 .main-title {
     font-family: 'Caveat', cursive;
     font-size: 1.7em;
-    margin: 0 50px;
+    margin: 50px 50px 0;
     text-align: right;
 }
 
@@ -85,7 +85,7 @@ label {
 input {
     min-width: 400px;
     height: 30px;
-    margin: 15px;
+    margin: 15px 0 25px;
     border-radius: 5px;
     font-size: 1em;
 }
@@ -94,10 +94,11 @@ input {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 25px 0;
 }
 
 .input-form {
-    margin: 25px;
+    margin: 15px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -119,10 +120,10 @@ input {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin: 0 0 25px;
 }
 
 .recipes-title {
-    margin: 35px 0 0;
     font-size: 2em;
 }
 
@@ -147,7 +148,7 @@ input {
 }
 
 .recipe-photo {
-    margin: 5px;
+    margin: 5px 5px 0;
     max-width: 300px;
 }
 
@@ -157,28 +158,41 @@ input {
 
 .view-saved-recipes-button {
     margin-right: 5px;
+    width: 160px;
+}
+
+.hide-saved-recipes-button {
+    width: 160px;
 }
 
 .saved-recipes-box {
     transition-timing-function: ease;
-    transition: .5s;
+    transition: 1.5s;
 }
 
 .saved-recipes-list {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
-.submit-button {
-    max-width: 100px;
+.search-button {
+    width: 120px;
 }
 
 .recipe-button {
-    margin: 5px;
+    margin: 5px 0 0;
+    width: 300px;
+    align-self: center;
 }
 
 .enter {
-    margin: 75px 0;
+    margin: 25px 0 75px;
+}
+
+#star-icon:hover {
+    color: darkgrey;
+    cursor: pointer;
 }
 
 hr {
@@ -227,6 +241,10 @@ hr {
     }
     form {
         margin: 15px;
+        font-size: .8em;
+    }
+    label {
+        font-size: 1.1em;
     }
     input {
         min-width: 200px;
@@ -234,13 +252,16 @@ hr {
     h3 {
         margin: 0 0 5px;
     }
+    .recipes-title {
+        font-size: 1.7em;
+    }
     .main-title {
-        font-size: 1.5em;
+        font-size: 1.7em;
         margin: 0 35px;
         text-align: center;
     }
     .main-subtitle {
-        font-size: .9em;
+        font-size: 1.1em;
         margin: 0 35px;
         text-align: center;
     }
