changed header image and configured history

--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -108,7 +108,7 @@ input {
 }
 
 .food-carousel {
-    background: url('https://i2.wp.com/www.nourishmovelove.com/wp-content/uploads/2017/01/Avocado-Toast-Egg_Horizontal_2.jpg?fit=5184%2C3456&ssl=1') center center no-repeat;
+    background: url('http://trig010.com/photos/egg.jpg') center center no-repeat;
     background-size: cover;
     min-width: 100%;
     height: 200px;
