--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -3,11 +3,10 @@
     text-align: center;
 }
 
-body {
+body, html {
     margin: 0;
     display: flex;
     flex-direction: column;
-
 }
 
 .flex-container {
@@ -15,21 +14,35 @@ body {
 }
 
 .splash-container {
-    margin: 125px auto 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background:url(https://s3.us-east-2.amazonaws.com/trig010/food-preparation1.jpg) no-repeat center center fixed;
+    background-size: cover;
+}
+
+header {
+    margin: 125px 0 0;
+    width: 110%;
+    border: 3px solid #f1da36;
+    border-radius: 10px;
+    height: 180px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, .6);
+    color: white;
 }
 
 .description-container {
     display: flex;
     flex: 1;
     justify-content: space-around;
-    padding: 0 175px 20%;
+    padding: 0 175px 100px;
 }
 
 .description-item {
-    border: 1px solid #f1da36;
+    border: 3px solid #f1da36;
     border-radius: 50%;
     padding: 10px;
     min-width: 200px;
@@ -38,6 +51,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-color: rgba(0, 0, 0, .6);
+    color: white;
 }
 
 .description-title {
@@ -46,20 +61,14 @@ body {
 
 .subtitle {
     font-size: 2em;
+    margin: 0 auto 10px;
 }
 
 .main-title {
     font-family: 'Caveat', cursive;
-    font-size: 1.7em;
-    margin: 50px 50px 0;
-    text-align: right;
-}
-
-.main-subtitle {
-    font-family: 'Caveat', cursive;
-    font-size: 1.1em;
-    margin: 0 50px;
-    text-align: right;
+    font-size: 3.5em;
+    margin: 0 auto;
+    text-align: center;
 }
 
 .material-icons.md-48 { font-size: 48px; }
@@ -81,8 +90,7 @@ p {
 }
 
 label {
-    font-size: 1.3em;
-    font-weight: bold;
+    font-size: 1.1em;
 }
 
 input {
@@ -97,7 +105,6 @@ input {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 25px 0;
 }
 
 .input-form {
@@ -108,11 +115,11 @@ input {
 }
 
 .food-carousel {
-    background: url('http://trig010.com/photos/egg.jpg') center center no-repeat;
+    background: url('https://s3.us-east-2.amazonaws.com/trig010/egg_header.jpg') center center no-repeat;
     background-size: cover;
     min-width: 100%;
-    height: 200px;
-    margin-bottom: 50px;
+    height: 215px;
+    margin-bottom: 35px;
 }
 
 .food-photo {
@@ -127,7 +134,7 @@ input {
 }
 
 .recipes-title {
-    font-size: 2em;
+    font-size: 1.7em;
 }
 
 .recipe-container {
@@ -191,6 +198,7 @@ input {
 
 .enter {
     margin: 25px 0 75px;
+    width: 150px;
 }
 
 #star-icon:hover {
@@ -207,17 +215,23 @@ hr {
         margin-bottom: 20px;
     }
     .splash-container {
-        margin: 35px auto;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
+    header {
+      height: 175px;
+      margin: 50px 0 0;
+    }
     .description-container {
         padding: 10px;
         flex-direction: column;
+        margin: 10px 0 50px;
     }
     .description-item {
         margin: 5px 0;
+        min-width: 180px;
+        min-height: 180px;
     }
     .recipe-container {
         flex-direction: column;
@@ -229,10 +243,10 @@ hr {
         flex-direction: column;
     }
     .title {
-        font-size: 4em;
+        font-size: 3.5em;
     }
     .subtitle {
-        font-size: 1.5em;
+        font-size: 1.7em;
     }
     .enter {
         margin: 15px 0 15px 0;
@@ -256,15 +270,10 @@ hr {
         margin: 0 0 5px;
     }
     .recipes-title {
-        font-size: 1.7em;
+        font-size: 1.3em;
     }
     .main-title {
-        font-size: 1.7em;
-        margin: 0 35px;
-        text-align: center;
-    }
-    .main-subtitle {
-        font-size: 1.1em;
+        font-size: 2.7em;
         margin: 0 35px;
         text-align: center;
     }
